@@ -70,7 +70,8 @@ class _ImageArea(gtk.ScrolledWindow):
 
     def add_extra_image(self, path):
         """Add an imported image (at <path>) to the end of the image list."""
-        thumbnailer = thumbnail_tools.Thumbnailer(store_on_disk=False)
+        thumbnailer = thumbnail_tools.Thumbnailer()
+        thumbnailer.set_store_on_disk(False)
         thumb = thumbnailer.thumbnail(path)
 
         if thumb is None:
